docs: added free-form visualization section, which includes precision, recall, and f1 score plots.  Cleaned up report text and notebook as well.

--- a/capstone/mlnd_capstone.ipynb
+++ b/capstone/mlnd_capstone.ipynb
@@ -38,7 +38,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -628,7 +630,9 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -664,7 +668,9 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -722,7 +728,9 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -778,7 +786,9 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -844,7 +854,9 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -909,7 +921,9 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -955,6 +969,7 @@
    "cell_type": "code",
    "execution_count": 67,
    "metadata": {
+    "collapsed": false,
     "scrolled": false
    },
    "outputs": [
@@ -990,7 +1005,9 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1052,12 +1069,9 @@
    "source": [
     "## Use VGG for transfer learning\n",
     "Clone the VGG repository in the same directory as the notebook\n",
-    "Note that there is a bug in the direct tensorflow-vgg github, so it won't work if I clone from there\n",
-    "```\n",
-    "git clone https://github.com/machrisaa/tensorflow-vgg.git tensorflow_vgg\n",
-    "```\n",
+    "Note that there is a bug in the direct tensorflow-vgg github, so it won't work if I clone from here [https://github.com/machrisaa/tensorflow-vgg.git]\n",
     "\n",
-    "I can clone the udacity deep-learning library and then copy the deep-learning/transfer-learning/tensorflow_vgg\n",
+    "I can clone the udacity deep-learning library [https://github.com/udacity/deep-learning.git] and then copy the deep-learning/transfer-learning/tensorflow_vgg\n",
     "folder to the same parent folder of this notebook, then it will work."
    ]
   },
@@ -1079,7 +1093,9 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1181,7 +1197,9 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1328,7 +1346,9 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1402,7 +1422,9 @@
   {
    "cell_type": "code",
    "execution_count": 149,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1424,7 +1446,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1469,7 +1493,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1505,7 +1531,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1582,7 +1610,9 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1709,7 +1739,9 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1766,12 +1798,13 @@
     "    has something to concatenate with the 1st view\n",
     "\n",
     "    gets the maximum for each index within the view\n",
+    "    \n",
     "    '''\n",
-    "    view_pool_layer = tf.expand_dims(view_features_layer[0], 0) # eg. [100] -> [1, 100]\n",
+    "    view_pool_layer = tf.expand_dims(view_features_layer[0], 0)\n",
     "    for view in view_features_layer[1:]:\n",
     "        view = tf.expand_dims(view, 0)\n",
     "        view_pool_layer = tf.concat([view_pool_layer, view], 0)\n",
-    "    #print('view_pool_layer before reducing:', view_pool_layer.get_shape().as_list())\n",
+    "    \n",
     "    view_pool_layer = tf.reduce_max(view_pool_layer, [0], name=name)\n",
     "    return view_pool_layer"
    ]
@@ -1779,7 +1812,9 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -1832,7 +1867,9 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -1876,7 +1913,9 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -1966,7 +2005,9 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -2129,6 +2170,7 @@
    "cell_type": "code",
    "execution_count": 173,
    "metadata": {
+    "collapsed": false,
     "scrolled": true
    },
    "outputs": [
@@ -2214,13 +2256,7 @@
       "Epoch  6, batch 6, time 2.69m  train loss 0.4044, valid loss 0.4917; train acc 0.8346, valid acc 0.7353\n",
       "Epoch  6, batch 7, time 2.73m  train loss 0.4054, valid loss 0.5004; train acc 0.8318, valid acc 0.7176\n",
       "Epoch  6, batch 8, time 2.76m  train loss 0.4259, valid loss 0.5077; train acc 0.8235, valid acc 0.7235\n",
-      "Epoch  6, batch 9, time 2.80m  train loss 0.4283, valid loss 0.5074; train acc 0.8189, valid acc 0.7529\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch  6, batch 9, time 2.80m  train loss 0.4283, valid loss 0.5074; train acc 0.8189, valid acc 0.7529\n",
       "Epoch  6, batch 10, time 2.84m  train loss 0.4120, valid loss 0.5036; train acc 0.8364, valid acc 0.7529\n",
       "Epoch  6, batch 11, time 2.87m  train loss 0.4186, valid loss 0.5006; train acc 0.8355, valid acc 0.7588\n",
       "Epoch  6, batch 12, time 2.91m  train loss 0.4163, valid loss 0.5011; train acc 0.8327, valid acc 0.7765\n",
@@ -2299,13 +2335,7 @@
       "Epoch 12, batch 1, time 5.42m  train loss 0.2547, valid loss 0.3637; train acc 0.9724, valid acc 0.8882\n",
       "Epoch 12, batch 2, time 5.46m  train loss 0.2630, valid loss 0.3670; train acc 0.9724, valid acc 0.9000\n",
       "Epoch 12, batch 3, time 5.49m  train loss 0.2735, valid loss 0.3688; train acc 0.9642, valid acc 0.8941\n",
-      "Epoch 12, batch 4, time 5.53m  train loss 0.2744, valid loss 0.3679; train acc 0.9724, valid acc 0.8941\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 12, batch 4, time 5.53m  train loss 0.2744, valid loss 0.3679; train acc 0.9724, valid acc 0.8941\n",
       "Epoch 12, batch 5, time 5.57m  train loss 0.2680, valid loss 0.3674; train acc 0.9733, valid acc 0.9118\n",
       "Epoch 12, batch 6, time 5.61m  train loss 0.2750, valid loss 0.3656; train acc 0.9733, valid acc 0.8941\n",
       "Epoch 12, batch 7, time 5.64m  train loss 0.2784, valid loss 0.3702; train acc 0.9733, valid acc 0.8765\n",
@@ -2384,13 +2414,7 @@
       "Epoch 17, batch 10, time 8.18m  train loss 0.1900, valid loss 0.2915; train acc 0.9743, valid acc 0.9059\n",
       "Epoch 17, batch 11, time 8.22m  train loss 0.2030, valid loss 0.2862; train acc 0.9614, valid acc 0.9000\n",
       "Epoch 17, batch 12, time 8.26m  train loss 0.2012, valid loss 0.2842; train acc 0.9669, valid acc 0.9059\n",
-      "Epoch 17, batch 13, time 8.29m  train loss 0.1961, valid loss 0.2850; train acc 0.9724, valid acc 0.9118\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 17, batch 13, time 8.29m  train loss 0.1961, valid loss 0.2850; train acc 0.9724, valid acc 0.9118\n",
       "Epoch 17, batch 14, time 8.33m  train loss 0.1018, valid loss 0.2856; train acc 1.0000, valid acc 0.9118\n",
       "Epoch 18, batch 1, time 8.34m  train loss 0.1839, valid loss 0.2914; train acc 0.9770, valid acc 0.9118\n",
       "Epoch 18, batch 2, time 8.37m  train loss 0.1901, valid loss 0.2929; train acc 0.9779, valid acc 0.9118\n",
@@ -2501,6 +2525,7 @@
    "cell_type": "code",
    "execution_count": 56,
    "metadata": {
+    "collapsed": false,
     "scrolled": true
    },
    "outputs": [
@@ -2564,7 +2589,9 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -2626,7 +2653,9 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -2688,7 +2717,9 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -2753,7 +2784,9 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -2824,7 +2857,9 @@
   {
    "cell_type": "code",
    "execution_count": 102,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -2883,7 +2918,9 @@
   {
    "cell_type": "code",
    "execution_count": 107,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -2944,7 +2981,9 @@
   {
    "cell_type": "code",
    "execution_count": 111,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -3006,7 +3045,9 @@
   {
    "cell_type": "code",
    "execution_count": 177,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -3083,7 +3124,9 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -3142,6 +3185,7 @@
    "cell_type": "code",
    "execution_count": 113,
    "metadata": {
+    "collapsed": false,
     "scrolled": true
    },
    "outputs": [
@@ -3319,7 +3363,9 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -3349,7 +3395,9 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -3379,7 +3427,9 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -3409,7 +3459,9 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -3439,7 +3491,9 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -3469,7 +3523,9 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -3499,7 +3555,9 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -3529,7 +3587,9 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -3559,7 +3619,9 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -3589,7 +3651,9 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -3622,7 +3686,9 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -3663,7 +3729,9 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -3703,7 +3771,9 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
