docs: added README.md, renamed capstone_proposal.pdf to proposal.pdf.  Modified mlnd_capstone.ipynb so the path refers to ./data/ folder. Converted capstone_report to a pdf.

--- a/capstone/mlnd_capstone.ipynb
+++ b/capstone/mlnd_capstone.ipynb
@@ -38,7 +38,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -107,7 +109,7 @@
    "outputs": [],
    "source": [
     "#I placed the data folder in the same directory as the notebook\n",
-    "img_paths = glob.glob('../../capstone/data/aps/*.aps')"
+    "img_paths = glob.glob('./data/aps/*.aps')"
    ]
   },
   {
@@ -470,9 +472,9 @@
     "\n",
     "\"\"\"\n",
     "\n",
-    "image_paths, target_zone_arr, labels_d = get_xy(labels_file='../../capstone/data/labels/stage1_labels.csv', \n",
+    "image_paths, target_zone_arr, labels_d = get_xy(labels_file='./data/labels/stage1_labels.csv', \n",
     "                                                n_zones=17, \n",
-    "                                                pre_path='../../capstone/data/aps/',\n",
+    "                                                pre_path='./data/aps/',\n",
     "                                                file_ext='.aps')"
    ]
   },
@@ -492,9 +494,9 @@
     "\n",
     "Test submission has 100 samples\n",
     "\"\"\"\n",
-    "image_paths_test, target_zone_arr_test, labels_d_test = get_xy(labels_file='../../capstone/data/labels/stage1_sample_submission.csv',\n",
+    "image_paths_test, target_zone_arr_test, labels_d_test = get_xy(labels_file='./data/labels/stage1_sample_submission.csv',\n",
     "                                                               n_zones=17,\n",
-    "                                                               pre_path='../../capstone/data/aps/',\n",
+    "                                                               pre_path='./data/aps/',\n",
     "                                                               file_ext='.aps')"
    ]
   },
@@ -628,7 +630,9 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -664,7 +668,9 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -722,7 +728,9 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -778,7 +786,9 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -844,7 +854,9 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -909,7 +921,9 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -955,6 +969,7 @@
    "cell_type": "code",
    "execution_count": 67,
    "metadata": {
+    "collapsed": false,
     "scrolled": false
    },
    "outputs": [
@@ -990,7 +1005,9 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1076,7 +1093,9 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1095,7 +1114,7 @@
     "from os.path import isfile, isdir\n",
     "from tqdm import tqdm\n",
     "\n",
-    "vgg_dir = '../../capstone/tensorflow_vgg/'\n",
+    "vgg_dir = './tensorflow_vgg/'\n",
     "# Make sure vgg exists\n",
     "if not isdir(vgg_dir):\n",
     "    raise Exception(\"VGG directory doesn't exist!\")\n",
@@ -1178,7 +1197,9 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1325,7 +1346,9 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1386,10 +1409,10 @@
     "depth = 512\n",
     "regions = 17\n",
     "\n",
-    "with open('../../capstone/code_vgg16_conv5_3') as f:\n",
+    "with open('./code_vgg16_conv5_3') as f:\n",
     "    code = np.fromfile(f, dtype=np.float32)\n",
     "    \n",
-    "with open('../../capstone/target_vgg16_conv5_3') as f:\n",
+    "with open('./target_vgg16_conv5_3') as f:\n",
     "    target = np.fromfile(f, dtype=np.float32)\n",
     "    \n",
     "code = code.reshape([n_obs,angles,height,width,depth])\n",
@@ -1399,7 +1422,9 @@
   {
    "cell_type": "code",
    "execution_count": 149,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1421,7 +1446,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1442,7 +1469,7 @@
     "depth = 512\n",
     "regions = 17\n",
     "\n",
-    "with open('../../capstone/code_test_vgg16_conv5_3') as f:\n",
+    "with open('./code_test_vgg16_conv5_3') as f:\n",
     "    code_test = np.fromfile(f, dtype=np.float32)\n",
     "    \n",
     "#with open('target_test') as f:\n",
@@ -1460,13 +1487,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## split into training and validation data"
+    "## split into training, validation and test"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Note, please run the cell Option 1 or Option 2, but each overrides the other"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1480,6 +1516,8 @@
    ],
    "source": [
     "\"\"\"\n",
+    "Option 1 with more training data\n",
+    "\n",
     "split into training and validation data\n",
     "I'm using test size of 17.4% so that the test and validation each have 100 observations.\n",
     "The test submission sample is 100 observations long.\n",
@@ -1502,7 +1540,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1516,6 +1556,8 @@
    ],
    "source": [
     "\"\"\"\n",
+    "Option 2 for more test data\n",
+    "\n",
     "for testing and output of results, reserve more data for testing, and leave out validation\n",
     "\"\"\"\n",
     "\"\"\"\n",
@@ -1579,7 +1621,9 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1706,7 +1750,9 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1777,7 +1823,9 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -1830,7 +1878,9 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -1874,7 +1924,9 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -1964,7 +2016,9 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -2115,18 +2169,19 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Train the model"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 19,
    "metadata": {
+    "collapsed": false,
     "scrolled": true
    },
    "outputs": [
@@ -2212,13 +2267,7 @@
       "Epoch  6, batch 1, time 3.51m  train loss 0.4733, valid loss 0.5771; train acc 0.7601, valid acc 0.6882\n",
       "Epoch  6, batch 2, time 3.56m  train loss 0.4765, valid loss 0.5623; train acc 0.7546, valid acc 0.7035\n",
       "Epoch  6, batch 3, time 3.60m  train loss 0.4419, valid loss 0.5582; train acc 0.7914, valid acc 0.7129\n",
-      "Epoch  6, batch 4, time 3.64m  train loss 0.4631, valid loss 0.5532; train acc 0.7812, valid acc 0.7159\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch  6, batch 4, time 3.64m  train loss 0.4631, valid loss 0.5532; train acc 0.7812, valid acc 0.7159\n",
       "Epoch  6, batch 5, time 3.69m  train loss 0.4910, valid loss 0.5478; train acc 0.7702, valid acc 0.7247\n",
       "Epoch  6, batch 6, time 3.73m  train loss 0.4501, valid loss 0.5277; train acc 0.8180, valid acc 0.7388\n",
       "Epoch  6, batch 7, time 3.77m  train loss 0.4271, valid loss 0.5014; train acc 0.8336, valid acc 0.7818\n",
@@ -2297,13 +2346,7 @@
       "Epoch 11, batch 5, time 6.90m  train loss 0.3165, valid loss 0.4043; train acc 0.9522, valid acc 0.8647\n",
       "Epoch 11, batch 6, time 6.94m  train loss 0.3120, valid loss 0.4024; train acc 0.9540, valid acc 0.8700\n",
       "Epoch 11, batch 7, time 6.99m  train loss 0.3149, valid loss 0.4033; train acc 0.9660, valid acc 0.8671\n",
-      "Epoch 11, batch 8, time 7.03m  train loss 0.3055, valid loss 0.4006; train acc 0.9752, valid acc 0.8794\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 11, batch 8, time 7.03m  train loss 0.3055, valid loss 0.4006; train acc 0.9752, valid acc 0.8794\n",
       "Epoch 11, batch 9, time 7.07m  train loss 0.3195, valid loss 0.4038; train acc 0.9706, valid acc 0.8765\n",
       "Epoch 11, batch 10, time 7.12m  train loss 0.3134, valid loss 0.4027; train acc 0.9642, valid acc 0.8776\n",
       "Epoch 11, batch 11, time 7.16m  train loss 0.3294, valid loss 0.4080; train acc 0.9605, valid acc 0.8729\n",
@@ -2382,13 +2425,7 @@
       "Epoch 16, batch 9, time 10.28m  train loss 0.2196, valid loss 0.3136; train acc 0.9642, valid acc 0.8888\n",
       "Epoch 16, batch 10, time 10.33m  train loss 0.2027, valid loss 0.3093; train acc 0.9623, valid acc 0.8941\n",
       "Epoch 16, batch 11, time 10.37m  train loss 0.2047, valid loss 0.3037; train acc 0.9660, valid acc 0.8982\n",
-      "Epoch 16, batch 12, time 10.41m  train loss 0.1837, valid loss 0.3011; train acc 0.9706, valid acc 0.8918\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 16, batch 12, time 10.41m  train loss 0.1837, valid loss 0.3011; train acc 0.9706, valid acc 0.8918\n",
       "Epoch 16, batch 13, time 10.46m  train loss 0.1970, valid loss 0.2958; train acc 0.9632, valid acc 0.9018\n",
       "Epoch 16, batch 14, time 10.50m  train loss 0.1902, valid loss 0.2922; train acc 0.9733, valid acc 0.9047\n",
       "Epoch 16, batch 15, time 10.54m  train loss 0.1710, valid loss 0.2929; train acc 0.9873, valid acc 0.9094\n",
@@ -2519,6 +2556,7 @@
    "cell_type": "code",
    "execution_count": 56,
    "metadata": {
+    "collapsed": false,
     "scrolled": true
    },
    "outputs": [
@@ -2582,7 +2620,9 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -2644,7 +2684,9 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -2706,7 +2748,9 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -2771,7 +2815,9 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -2842,7 +2888,9 @@
   {
    "cell_type": "code",
    "execution_count": 102,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -2901,7 +2949,9 @@
   {
    "cell_type": "code",
    "execution_count": 107,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -2962,7 +3012,9 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -3027,7 +3079,9 @@
   {
    "cell_type": "code",
    "execution_count": 177,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -3104,7 +3158,9 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -3188,6 +3244,7 @@
    "cell_type": "code",
    "execution_count": 113,
    "metadata": {
+    "collapsed": false,
     "scrolled": true
    },
    "outputs": [
@@ -3365,7 +3422,9 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -3395,7 +3454,9 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -3425,7 +3486,9 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -3455,7 +3518,9 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -3485,7 +3550,9 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -3515,7 +3582,9 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -3545,7 +3614,9 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -3575,7 +3646,9 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -3605,7 +3678,9 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -3635,7 +3710,9 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -3668,7 +3745,9 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -3709,7 +3788,9 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -3749,7 +3830,9 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
